--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "nodemailer": "^6.9.13",
     "sequelize": "^6.37.3",
     "tedious": "^18.2.0",
     "uuid": "^9.0.1",
